# techsprint-automation

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  README.md  feature_engineering.py  locustfile.py  main.py  mock_data.py  models.py  planning_engine.py  pyproject.toml  rebuild_index.py  requirements.txt  test_endpoints.py
backend/agents/: __init__.py  coordinator.py  specialized_agents.py
backend/config/: products.py
backend/data/: faiss_index.bin.corrupt  faiss_index_texts.pkl  generate_samples.py  sample_bom.csv  sample_sales.csv  sample_sales_real_format.csv
backend/data_loader/: bom_loader.py  employee_loader.py  extract_pdf.py  feature_store.py  generate_results.py  inventory_loader.py  run_kopikita_pipeline.py  sales_loader.py  train_models.py  warehouse_loader.py
backend/dataset/: PAPER.md  forecast_result.csv  insights.json  inventory_result.csv  kpi_result.csv  mrp_result.csv  profitability_result.csv
backend/models/: catboost_model.cbm  demand_nn.onnx  ensemble_weights.json  lgbm_model.pkl  lightgbm_model.txt  menu_mapping.json  xgboost_model.pkl
backend/notebooks/: Kopikita_Pipeline.ipynb  eda.ipynb  pipeline_runner.py
backend/rag/: __init__.py  build_index.py  context_builder.py  copilot_service.py  embedder.py  prompts.py  query_classifier.py  reranker.py  retriever.py  vector_store.py
backend/routers/: anomaly_router.py  audit_router.py  command_center_router.py  copilot_router.py  dashboard_router.py  data_quality_router.py  digital_twin_router.py  explainability_router.py  (+12 more)
(+89 files in other folders)
